# RocketPlanner

./: .clangd  .gitignore  CMakeLists.txt  LoadKspParts.cpp  LoadKspParts.h  NelderMead.cpp  NelderMead.h  RocketSolver.cpp  RocketSolver.h  helper.h  kspConstants.h  main.cpp  parts.cpp  parts.h  plot_flight.py  rocket.cpp  rocket.h  stage.cpp  stage.h  unittest.cpp
src/: FlightSimulator.cpp  FlightSimulator.h  LoadKspParts.cpp  NelderMead.cpp  PartSerializer.cpp  PartSerializer.h  RocketConfig.cpp  RocketConfig.h  RocketSolver.cpp  RocketSolver.h  WindowSimulator.cpp  WindowSimulator.h  cmdargs.cpp  cmdargs.h  kspConstants.h  main.cpp  parts.cpp  parts.h  rocket.cpp  rocket.h  stage.h  unittest.cpp  utils.h
